Mise à jour charte graphique: typographie mode française, fond blanc, CTA noir

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>E-Shop - Votre boutique en ligne</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- HEADER -->
@@ -16,7 +16,8 @@
             <div class="container">
                 <div class="header-top-content">
                     <div class="header-top-left">
-                        <span>Livraison gratuite dès 50€</span>
+                        <span>Livraison gratuite dès 200€</span>
+                        <span style="margin-left: 20px;">Retours sous 14 jours</span>
                     </div>
                     <div class="header-top-right">
                         <a href="#">Assistance</a>
@@ -104,7 +105,7 @@
     </section>
 
     <!-- CATEGORIES BAR - Style Samsung -->
-    <section class="categories-bar">
+    <!-- <section class="categories-bar">
         <div class="container">
             <div class="categories-bar-scroll">
                 <a href="#" class="category-bar-item">
@@ -181,7 +182,7 @@
                 </a>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- SECTION 1: PACKS & PRODUITS -->
     <section class="section products-section">
@@ -370,31 +371,7 @@
             </div>
 
             <div class="categories-grid">
-                <!-- Category 1 -->
-                <div class="category-card">
-                    <div class="category-icon">
-                        <i class="fas fa-microchip"></i>
-                    </div>
-                    <div class="category-content">
-                        <h3>Tech</h3>
-                        <p>Accessoires et gadgets pour votre quotidien connecté</p>
-                        <a href="#" class="category-link">Découvrir <i class="fas fa-arrow-right"></i></a>
-                    </div>
-                </div>
-
-                <!-- Category 2 -->
-                <div class="category-card">
-                    <div class="category-icon">
-                        <i class="fas fa-leaf"></i>
-                    </div>
-                    <div class="category-content">
-                        <h3>Bien-être au travail</h3>
-                        <p>Produits ergonomiques et solutions de confort</p>
-                        <a href="#" class="category-link">Découvrir <i class="fas fa-arrow-right"></i></a>
-                    </div>
-                </div>
-
-                <!-- Category 3 -->
+                <!-- Category 1 -->                                 
                 <div class="category-card">
                     <div class="category-icon">
                         <i class="fas fa-gem"></i>
@@ -406,8 +383,36 @@
                     </div>
                 </div>
 
-                <!-- Category 4 -->
+                <!-- Category 2 -->
                 <div class="category-card">
+                    <div class="category-icon">
+                        <i class="fas fa-leaf"></i>
+                    </div>
+                    <div class="category-content">
+                        <h3>Bien‑être & soins</h3>
+                        <p>Produits ergonomiques et solutions de confort</p>
+                        <a href="#" class="category-link">Découvrir <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>                
+
+                <!-- Category 3 -->
+                <div class="category-card">
+                    <div class="category-icon">
+                        <i class="fas fa-microchip"></i>
+                    </div>
+                    <div class="category-content">
+                        <h3>Tech & Ergonomie</h3>
+                        <p>Accessoires et gadgets pour votre quotidien connecté</p>
+                        <a href="#" class="category-link">Découvrir <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+
+
+
+
+
+                <!-- Category 4 -->
+                <!-- <div class="category-card">
                     <div class="category-icon">
                         <i class="fas fa-home"></i>
                     </div>
@@ -416,10 +421,10 @@
                         <p>Décoration et organisation pour vos espaces</p>
                         <a href="#" class="category-link">Découvrir <i class="fas fa-arrow-right"></i></a>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Category 5 -->
-                <div class="category-card">
+                <!-- <div class="category-card">
                     <div class="category-icon">
                         <i class="fas fa-pump-soap"></i>
                     </div>
@@ -428,7 +433,7 @@
                         <p>Soins et fragrances pour prendre soin de vous</p>
                         <a href="#" class="category-link">Découvrir <i class="fas fa-arrow-right"></i></a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -708,7 +713,7 @@
                     </div>
 
                     <!-- Promo Card -->
-                    <div class="footer-promo-card">
+                    <!-- <div class="footer-promo-card">
                         <div class="promo-card-content">
                             <div class="promo-card-icon">
                                 <i class="fas fa-gift"></i>
@@ -717,7 +722,7 @@
                             <p>L'originalité est indémodable</p>
                             <a href="#" class="btn-promo">Obtenez un devis</a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -743,12 +748,12 @@
                         </div>
                         <div class="footer-legal">
                             <span>&copy; E-Shop, 2026</span>
-                            <a href="#">Conditions</a>
+                            <a href="#">CGV</a>
                             <a href="#">Confidentialité</a>
                             <a href="#">Cookies</a>
                             <a href="#">Accessibilité</a>
                             <a href="#">Mentions légales</a>
-                            <a href="#">Paramètres de consentement</a>
+                            <a href="#">Accessibilité & Paramètres de consentement</a>
                         </div>
                     </div>
                     <div class="footer-social">
