--- a/product.html
+++ b/product.html
@@ -6,7 +6,7 @@
     <title>Détail Produit - E-Shop</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- HEADER -->
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="header-top-content">
                     <div class="header-top-left">
-                        <span>Livraison gratuite dès 50€</span>
+                        <span>Livraison gratuite dès 200€</span>
                     </div>
                     <div class="header-top-right">
                         <a href="#">Assistance</a>
@@ -219,7 +219,7 @@
                     </div>
 
                     <!-- Action Buttons -->
-                    <div class="action-buttons">
+                    <!-- <div class="action-buttons">
                         <button class="btn-secondary-action">
                             <i class="fas fa-map-marker-alt"></i>
                             Réserver en boutique
@@ -228,7 +228,7 @@
                             <i class="fas fa-swatchbook"></i>
                             Commander un échantillon
                         </button>
-                    </div>
+                    </div> -->
 
                     <!-- Expert Section -->
                     <div class="expert-section">
@@ -446,7 +446,7 @@
                             <a href="#">Affiliés</a>
                         </div>
                     </div>
-                    <div class="footer-promo-card">
+                    <!-- <div class="footer-promo-card">
                         <div class="promo-card-content">
                             <div class="promo-card-icon">
                                 <i class="fas fa-gift"></i>
@@ -455,7 +455,7 @@
                             <p>L'originalité est indémodable</p>
                             <a href="#" class="btn-promo">Obtenez un devis</a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -477,12 +477,12 @@
                         </div>
                         <div class="footer-legal">
                             <span>&copy; E-Shop, 2026</span>
-                            <a href="#">Conditions</a>
+                            <a href="#">CGV</a>
                             <a href="#">Confidentialité</a>
                             <a href="#">Cookies</a>
                             <a href="#">Accessibilité</a>
                             <a href="#">Mentions légales</a>
-                            <a href="#">Paramètres de consentement</a>
+                            <a href="#">Accessibilité & Paramètres de consentement</a>
                         </div>
                     </div>
                     <div class="footer-social">
