--- a/tech.html
+++ b/tech.html
@@ -6,7 +6,7 @@
     <title>Tech - E-Shop</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- HEADER -->
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="header-top-content">
                     <div class="header-top-left">
-                        <span>Livraison gratuite dès 50€</span>
+                        <span>Livraison gratuite dès 200€</span>
                     </div>
                     <div class="header-top-right">
                         <a href="#">Assistance</a>
@@ -388,13 +388,13 @@
             <div class="container">
                 <div class="footer-bottom-content">
                     <div class="footer-legal">
-                        <span>&copy; E-Shop, 2025</span>
-                        <a href="#">Conditions</a>
+                        <span>&copy; E-Shop, 2026</span>
+                        <a href="#">CGV</a>
                         <a href="#">Confidentialité</a>
                         <a href="#">Cookies</a>
                         <a href="#">Accessibilité</a>
                         <a href="#">Mentions légales</a>
-                        <a href="#">Paramètres de consentement</a>
+                        <a href="#">Accessibilité & Paramètres de consentement</a>
                     </div>
                     <div class="footer-social">
                         <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
