UI: header centré, Packs en gras, bannière promo dégradé, couleur primary grise, correction JS

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <!-- Navigation Menu -->
                     <nav class="main-nav">
                         <ul class="nav-menu">
-                            <li><a href="#">Packs</a></li>
+                            <li><a href="#" class="nav-bold">Packs</a></li>
                             <li><a href="tech.html">Tech</a></li>
                             <li><a href="#">Bureau</a></li>
                             <li><a href="#">Bien-être</a></li>
